# helloesp

./: Cargo.toml
crates/app/: Cargo.toml
crates/app/src/: main.rs
crates/color/: Cargo.toml
crates/color-core/: Cargo.toml
crates/color-core/src/: lib.rs
crates/color-macros/: Cargo.toml
crates/color/src/: lib.rs
crates/graphics/: Cargo.toml
crates/graphics/src/: geometry.rs  lib.rs  screen.rs  shape.rs
crates/hardware/: Cargo.toml
crates/hardware/src/: lcd.rs
docs/: hardware-slop.md
src/: color.rs  geometry.rs  lcd.rs  lib.rs  screen.rs
