[workspace]
members = [
  "crates/app",
  "crates/color",
  "crates/color-macros",
  "crates/graphics",
  "crates/hardware",
]
resolver = "3"

[workspace.package]
edition = "2024"
rust-version = "1.88"
version = "0.1.0"

[workspace.dependencies]
byte-slice-cast = { version = "1.2.3", default-features = false }
color = { path = "crates/color" }
critical-section = "1.2.0"
embassy-executor = { version = "0.9.1", features = ["log"] }
embassy-time = { version = "0.5.0", features = ["log"] }
esp-alloc = "0.9.0"
esp-backtrace = { version = "0.18.1", features = [
  "esp32",
  "panic-handler",
  "println",
] }
esp-bootloader-esp-idf = { version = "0.4.0", features = ["esp32", "log-04"] }
esp-hal = { version = "~1.0", features = ["esp32", "log-04", "unstable"] }
esp-println = { version = "0.16.1", features = ["esp32", "log-04"] }
esp-rtos = { version = "0.2.0", features = [
  "embassy",
  "esp-alloc",
  "esp32",
  "log-04",
] }
graphics = { path = "crates/graphics" }
hardware = { path = "crates/hardware" }
log = "0.4.27"
static_cell = "2.1.1"
thiserror = { version = "2.0.12", default-features = false }
